# tlde

./: .env.example  Makefile  README.md  pyproject.toml
.workshop/: emu.yaml
.workshop/emulation/: README.md  sdk.yaml
.workshop/emulation/hooks/: setup-base  setup-project
docs/: FIRMWARE_EMULATION_PIPELINE.md  PLANNING_AGENT_PROMPT_OPENROUTER.md  RENODE_BUILDER_ARCHITECTURE.md
docs/skills/: README.md  mcuboot-emulation.md  renode-debugging.md  renode-peripheral-catalogue.md  renode-peripheral-model-generation.md  renode-peripheral-model-patterns.md  renode-repl-generation.md  renode-resc-generation.md  renode-robot-test-generation.md  zephyr-build-system.md  zephyr-dts-analysis.md
output/microbit_v2/: nrf52833_core.repl
prompts/: README.MD  dummy.txt  emu_test_agg.txt  firmware_emulation_manager.txt  fw_emu_eng.txt  fw_verif_eng.md
samples/flash_rw/: CMakeLists.txt  Makefile  README.md  prj.conf
samples/flash_rw/boards/: bbc_microbit_v2.conf
samples/flash_rw/src/: flash_test.c  flash_test.h  main.c
samples/hello/: CMakeLists.txt  Makefile
samples/hello/src/: main.c
samples/mcuboot_flash_img_copy/: CMakeLists.txt  Makefile  README.md  flash.py  prj.conf  sample.yaml  sysbuild.cmake  sysbuild.conf
samples/mcuboot_flash_img_copy/img_v1_0_0/: CMakeLists.txt  prj.conf
samples/mcuboot_flash_img_copy/img_v2_0_0/: CMakeLists.txt  prj.conf
samples/mcuboot_flash_img_copy/keys/: bad-rsa-2048.pem
samples/mcuboot_flash_img_copy/src/: main.c  (+2 more)
src/tlde/: __init__.py  __main__.py  agent.py  config.py  observability.py  providers.py  rag.py
(+18 files in other folders)
