[project]
name = "tlde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pcorrect", email = "dionisis.spiliopoulos@canonical.com" }
]
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
