[project]
name = "tlde"
version = "0.1.0"
description = "Too Long Didn't Emulate — multi-agent Renode emulation pipeline"
readme = "README.md"
authors = [
    { name = "pcorrect", email = "dionisis.spiliopoulos@canonical.com" }
]
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk>=0.3.0",
]

[project.scripts]
tlde = "tlde.pipeline.firmware_emulation:_cli"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
